FIX:[Swagger] fixing swagger
